created an index.html and styles.css files

--- a/cafe-menu/index.html
+++ b/cafe-menu/index.html
@@ -31,7 +31,7 @@
                         <p class="flavor">Mocha</p><p class="price">4.50</p>
                     </article>
                     
-            </sectio>
+            </section>
         </main>
         <hr class="bottom-line">
         <footer>
